Implement fixes suggested by IntelliJ editor
Signed-off-by: Andrew Donald Kennedy <andrew.kennedy@cloudsoftcorp.com>